<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".UserDetailActivity" >

    <!--
         <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/coming_soon" />
    -->

    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/LightSteelBlue" >
        
        <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivUser"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"/>

        <TextView
            android:id="@+id/tvDescription"
            android:paddingTop="5dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserScreenName"
            android:singleLine="true"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlStats"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/rlProfile"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="3" >

	<LinearLayout
	    android:id="@+id/llTwtStats"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="left"
    android:layout_marginLeft="10dp"
    android:layout_weight="1"
    android:clickable="true" >
    
		<TextView

            android:id="@+id/tvStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="@string/tweets"
            android:textColor="@color/DimGray"
            android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/llFollowingStats"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_gravity="center"
    	android:layout_weight="1"
    	android:clickable="true" >

		<TextView
		    android:id="@+id/tvFollowingStat"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textStyle="bold"
		    android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textColor="@color/DimGray"
            android:text="@string/following"
            android:textAppearance="?android:attr/textAppearanceSmall" />
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/llFollowerStats" 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_gravity="right"
    	android:layout_weight="1"
    	android:clickable="true" >
    
	    
		<TextView

            android:id="@+id/tvFollowersStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textColor="@color/DimGray"
            android:text="@string/follwers"
            android:textAppearance="?android:attr/textAppearanceSmall" />
</LinearLayout>
        
        
    </LinearLayout>
    <FrameLayout

        android:id="@+id/frUserTimeline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rlStats"/>

    

</RelativeLayout>