<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TweetDetailActivity" >

    <ImageView
        android:id="@+id/ivTwtDetPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/small_movie_poster" />

    <TextView
        android:id="@+id/tvTwtDetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivTwtDetPic"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/ivTwtDetPic"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTwtDetScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTwtDetName"
        android:layout_below="@+id/tvTwtDetName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTwtDetContent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivTwtDetPic"
        android:layout_below="@+id/ivTwtDetPic"
        android:layout_marginTop="36dp"
        android:maxLines="4"
        android:autoLink="web"
        android:singleLine="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
   <ImageView
   		android:id="@+id/ivMedia"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content" 
   		android:layout_alignLeft="@+id/ivTwtDetPic"
   		android:layout_below="@+id/tvTwtDetContent"></ImageView>

    <TextView
        android:id="@+id/tvTwtDetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTwtDetContent"
        android:layout_below="@+id/ivMedia"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTwtDetFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/tvTwtDetScreen"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTwtDetFav"
        android:layout_alignBottom="@+id/tvTwtDetFav"
        android:layout_toRightOf="@+id/tvTwtDetFav"
        android:text="@string/fav"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ivBar2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvTwtDetFav"
        android:layout_marginTop="20dp"
        android:background="#d3d3d3" />

    <ImageButton
        android:id="@+id/ibTwtDetReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBar2"
        android:layout_marginTop="18dp"
        android:background="@null"
        android:src="@drawable/ic_reply" />

    <ImageButton
        android:id="@+id/ibTwtDetRT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ibTwtDetReply"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/ibTwtDetReply"
        android:background="@null" />

    <ImageButton
        android:id="@+id/ibTwtDetFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ibTwtDetReply"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/ibTwtDetRT"
        android:background="@null"/>
    
    <ImageButton
        android:id="@+id/ibTwtDetShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ibTwtDetReply"
        android:layout_marginLeft="70dp"
        android:layout_toRightOf="@+id/ibTwtDetFav"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:src="@drawable/ic_share" />

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/etTwtDetRep"
        android:layout_marginTop="20dp"
        android:background="#d3d3d3" />
    
<LinearLayout android:focusable="true"
                android:focusableInTouchMode="true" android:layout_width="0px"
                android:layout_height="0px" />
    <EditText
        android:id="@+id/etTwtDetRep"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:ems="10" />

    <TextView
        android:id="@+id/tvTwtDetTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etTwtDetRep"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:paddingLeft="7dp"
        android:text="@string/twt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#666666"
        android:textStyle="bold" />

    <View
        android:id="@+id/view4"
        android:layout_width="1dip"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/tvTwtDetTweet"
        android:layout_toLeftOf="@+id/tvTwtDetTweet"
        android:background="#d3d3d3" />

    <TextView
        android:id="@+id/tvTwtDetChars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etTwtDetRep"
        android:layout_alignRight="@+id/view4"
        android:paddingRight="7dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvRetweetC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivBar2"
        android:layout_alignLeft="@+id/ivBar1"
        android:paddingTop="15dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBar1"
        android:layout_toRightOf="@+id/tvRetweetC"
        android:text="@string/retweets"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ivBar1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tvTwtDetTime"
        android:layout_below="@+id/tvTwtDetTime"
        android:layout_marginTop="15dp"
        android:background="#d3d3d3" />

</RelativeLayout>